[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Images/Lobby/Board Hover.png" type="Texture" id=1]
[ext_resource path="res://Assets/Images/Lobby/Shelving Hover.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/Lobby/Lobby.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/Lobby/Shelving Pressed.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/Lobby/Shelving Normal.png" type="Texture" id=5]
[ext_resource path="res://Assets/UIElements/Image/Background Map.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/Lobby/Board Normal.png" type="Texture" id=7]
[ext_resource path="res://Assets/Images/Lobby/Board Pressed.png" type="Texture" id=8]
[ext_resource path="res://Scenes/MainScenes/World/Lobby/Room.gd" type="Script" id=9]
[ext_resource path="res://Scenes/MainScenes/Menu/StatsScreen.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Sounds/Music/in-the-forest-ambient-acoustic-guitar-instrumental-background-music-for-videos-5718.mp3" type="AudioStream" id=11]
[ext_resource path="res://Assets/UIElements/Image/Music Icon Normal.png" type="Texture" id=12]
[ext_resource path="res://Assets/UIElements/Image/Music Icon Pressed.png" type="Texture" id=13]
[ext_resource path="res://Assets/UIElements/Image/Music Icon Hover.png" type="Texture" id=14]
[ext_resource path="res://Scenes/MainScenes/Menu/AudioButton.gd" type="Script" id=15]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Room" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -395.458
margin_top = -382.745
margin_right = 404.542
margin_bottom = 417.255
rect_min_size = Vector2( 800, 800 )
texture = ExtResource( 3 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShelvingButton" type="TextureButton" parent="Room"]
anchor_left = 0.442
anchor_top = 0.348
anchor_right = 0.442
anchor_bottom = 0.348
margin_left = -147.271
margin_top = -164.361
margin_right = 78.729
margin_bottom = 209.639
rect_scale = Vector2( 0.8, 0.8 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoardButton" type="TextureButton" parent="Room"]
anchor_left = 0.149
anchor_top = 0.47
anchor_right = 0.149
anchor_bottom = 0.47
margin_left = -100.2
margin_top = -154.0
margin_right = 148.8
margin_bottom = 104.0
rect_scale = Vector2( 0.8, 0.8 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsScreen" parent="." instance=ExtResource( 10 )]
visible = false
margin_top = 0.0
margin_bottom = 0.0

[node name="AudioButton" type="TextureButton" parent="."]
anchor_left = 0.958081
anchor_top = 0.078645
anchor_right = 0.958081
anchor_bottom = 0.078645
margin_left = -25.9621
margin_top = -25.6613
margin_right = 486.038
margin_bottom = 486.339
rect_scale = Vector2( 0.1, 0.1 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 14 )
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AudioButton"]
stream = ExtResource( 11 )
volume_db = -12.0
autoplay = true

[connection signal="pressed" from="Room/ShelvingButton" to="Room" method="_on_ShelvingButton_pressed"]
[connection signal="pressed" from="Room/BoardButton" to="Room" method="_on_BoardButton_pressed"]
[connection signal="pressed" from="AudioButton" to="AudioButton" method="_on_AudioButton_pressed"]
[connection signal="finished" from="AudioButton/AudioStreamPlayer" to="AudioButton" method="_on_AudioStreamPlayer_finished"]
